# 66Piano

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  kiss_fft.cpp  kiss_fft.h  note_detector.cpp  note_detector.h  pitch_yin.cpp  pitch_yin.h
app/src/main/java/com/pianokids/: MainActivity.kt  PianoKidsApp.kt
app/src/main/java/com/pianokids/audio/: AudioCapture.kt  NativeAudioEngine.kt  NoteRecognizer.kt  PianoListeningService.kt  PitchDetector.kt
app/src/main/java/com/pianokids/data/backup/: LocalBackupManager.kt
app/src/main/java/com/pianokids/data/db/: PianoDatabase.kt
app/src/main/java/com/pianokids/data/prefs/: UserPreferences.kt
app/src/main/java/com/pianokids/di/: AppModule.kt
app/src/main/java/com/pianokids/music/: DtwMatcher.kt  MidiImporter.kt  MidiParser.kt  NoteSequence.kt
app/src/main/java/com/pianokids/scan/: SheetMusicRecognizer.kt
app/src/main/java/com/pianokids/tts/: TtsHelper.kt  TtsProvider.kt
app/src/main/java/com/pianokids/ui/: PianoKidsApp.kt
app/src/main/java/com/pianokids/update/: ApkInstaller.kt  UpdateChecker.kt  UpdateViewModel.kt
app/src/main/res/drawable/: ic_piano_notification.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_provider_paths.xml
app/src/test/java/com/pianokids/scan/: SheetMusicRecognizerTest.kt
gradle/: libs.versions.toml
(+31 files in other folders)
